--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,16 @@ before_install:
 
 scripts:
   - docker run mchandwani/docker-react npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-2-885023118553"
+  bucket_path: "docker-react"
+  on:
+      branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
